@@ -10,6 +10,8 @@ importFrom(utils,tail)
 importFrom(utils,str)
 S3method(with, jobjRef)
 S3method(within, jobjRef)
+S3method(with, jarrayRef)
+S3method(within, jarrayRef)
 S3method(with, jclassName)
 S3method(within, jclassName)
 export( japply )
